--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -98,3 +98,23 @@ main#content {
   border-right-width: 1px;
   border-right-style: solid;
 }
+
+/* Pagination */
+.pagination {
+    display: inline-block;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+}
+
+.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
