--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -1,36 +1,45 @@
 .App {
-  text-align: center; }
+  text-align: center;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
+  height: 80px;
+}
 
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white; }
+  color: white;
+}
 
 .App-intro {
-  font-size: large; }
+  font-size: large;
+}
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
 
 nav ul {
-  list-style-type: none; }
+  list-style-type: none;
+}
 
 nav li {
-  display: inline; }
+  display: inline;
+}
+
 
 nav li a {
-  padding: 8px; }
+  padding: 8px;
+}
 
 .float-right {
-  float: right; }
+  float: right;
+}
+
 
 .modal {
   position: fixed;
@@ -40,43 +49,52 @@ nav li a {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.4); }
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
 
 .modal-content {
   background-color: #fefefe;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 20%; }
+  width: 20%;
+}
 
 .button.blue, .button.blue:visited {
-  background-color: #1a4a93; }
+  background-color: #1a4a93;
+}
 
 .button.blue:hover {
-  background-color: #153b76; }
+  background-color: #153b76;
+}
 
 .spinkit {
   position: relative;
   left: 45%;
   z-index: 9999;
-  top: 200px; }
+  top: 200px;
+}
 
 main#content {
-  min-height: 400px; }
+  min-height: 400px;
+}
 
 .card {
-  margin-top: 16px; }
+  margin-top: 16px;
+}
 
 .card .grid-row {
   margin-top: 1px;
-  background-color: #e2e2e2; }
+  background-color: #e2e2e2;
+}
 
-.card div.column-one-third, .card div.column-two-thirds {
+.card div.column-one-third,  .card div.column-two-thirds {
   background-color: e2e2e2;
   border-left-color: white;
   border-left-width: 1px;
   border-left-style: solid;
   border-right-color: white;
   border-right-width: 1px;
-  border-right-style: solid; }
+  border-right-style: solid;
+}
